# agentic

./: .env.example  .gitignore  LICENSE  README.md  __init__.py  activate.sh  pyproject.toml
.github/workflows/: test.yml
agents/calculator/: __init__.py  agent.py  tools.py
agents/file_navigator/: README.md  __init__.py  agent.py  compare_models.py  eval_agent.py  expected_outputs.py  mock_tools.py  run_eval.py  test_tools.py  test_validators.py  tools.py  validators.py
agents/file_navigator/eval/: README.md  __init__.py  orchestrator.py  run_eval.py  runner.py  test_validator.py  validator.py
agents/file_navigator/eval/prompts/: v1_find_test_files.txt
agents/file_navigator/prompts/: README.md  explore_codebase.txt
agents/file_navigator/scenarios/: README.md  basic.json
agents/weather/: __init__.py  agent.py
framework/: agents.py  config.py  errors.py  llm.py  messages.py  observers.py  tools.py
framework/tests/: README.md  manual_test_error_messages.py
framework/tests/integration/: __init__.py  test_agent_integration.py  test_agent_scenarios.py  test_llm_errors_integration.py  test_llm_integration.py  test_llm_json_mode_contract.py  test_multi_model_compatibility.py  test_openai_contract.py  test_tool_calling_protocols.py
framework/tests/unit/: __init__.py  test_agent_behavior.py  test_agent_checkpoint.py  test_agent_error_handling.py  test_agent_observers.py  test_agent_semantic_errors.py  test_agent_state.py  test_error_classification.py  test_llm_error_handling.py  test_llm_json_mode.py  test_llm_metadata.py  test_llm_semantic_errors.py  test_llm_transient_errors.py  test_response_parsing.py  test_tool_error_messages.py  test_tool_unit.py
observers/: __init__.py  console_tracer.py
scripts/: manual_model_test.py
tools/: calculator_tool.py  weather_tool.py
web_debugger/: __init__.py
web_debugger/static/css/: style.css
web_debugger/static/js/: app.js
web_debugger/templates/: index.html
